--- a/src/high-level-kdl/tests/CMakeLists.txt
+++ b/src/high-level-kdl/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ macro(add_unit_test_hl classname)
     target_link_libraries(${testbinary} idyntree-high-level-kdl idyntree-yarp-kdl idyntree-yarp)
     add_test(NAME ${testname} COMMAND ${testbinary})
     if(IDYNTREE_RUN_VALGRIND_TESTS)
-       add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} ./${testbinary})
+       add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} $<TARGET_FILE:${testbinary}>)
     endif()
 endmacro()
 
@@ -21,7 +21,7 @@ macro(add_unit_test_hl_yarp classname)
     target_link_libraries(${testbinary} idyntree-high-level-kdl idyntree-yarp-kdl idyntree-yarp idyntree-high-level)
     add_test(NAME ${testname} COMMAND ${testbinary})
     if(IDYNTREE_RUN_VALGRIND_TESTS)
-       add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} ./${testbinary})
+       add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} $<TARGET_FILE:${testbinary}>)
     endif()
 endmacro()
 
