--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,14 @@ os:
  - Visual Studio 2013
 
 install:
+  # to install unzipper do: "cinst 7zip.commandline -x86"
+  # the format is: "7z x c:\path-to-archive\archive.zip -oc:\path-where-unzip -y > nul"
+
   - ps: >-
       $dwntool = New-Object System.Net.WebClient
+
       $Stoploop = $false
+
       do {
           try {
             $dwntool.DownloadFile('https://github.com/robotology/yarp/releases/download/v2.3.66/yarp_2.3.66_v12_x86_1.exe','c:\dev\yarp.exe')
@@ -24,11 +29,13 @@ install:
           }
       }
       While ($Stoploop -eq $false)
+
   - cmd: start "" /WAIT "c:\dev\yarp.exe" /S
   - cmd: timeout 10
   - cmd: start "" /WAIT "c:\dev\icub.exe" /S
   - cmd: timeout 10
   - cmd: dir "c:\Program Files (x86)\robotology"
+
 
 build:
 
