[inverse-kinematics] Add COM Convex Hull projection inequality constraint
Add first version of the constraint on the center of mass projection
contained in the convex hull.

--- a/src/inverse-kinematics/CMakeLists.txt
+++ b/src/inverse-kinematics/CMakeLists.txt
@@ -4,8 +4,10 @@ project(iDynTree_InverseKinematics CXX)
 
 set(libraryname idyntree-inverse-kinematics)
 
-set(IDYN_TREE_IK_SOURCES src/InverseKinematics.cpp)
-set(IDYN_TREE_IK_HEADERS include/iDynTree/InverseKinematics.h)
+set(IDYN_TREE_IK_SOURCES src/ConvexHullHelpers.cpp
+                         src/InverseKinematics.cpp)
+set(IDYN_TREE_IK_HEADERS include/iDynTree/ConvexHullHelpers.h
+                         include/iDynTree/InverseKinematics.h)
 
 set(PRIVATE_IDYN_TREE_IK_SOURCES src/InverseKinematicsNLP.cpp
                                  src/InverseKinematicsData.cpp
