--- a/src/model_io/urdf-kdl/CMakeLists.txt
+++ b/src/model_io/urdf-kdl/CMakeLists.txt
@@ -13,6 +13,9 @@ else()
     find_package(urdfdom_headers REQUIRED)
     find_package(urdfdom REQUIRED)
     find_package(Boost REQUIRED)
+    if (NOT(DEFINED urdfdom_headers_VERSION AND ${urdfdom_headers_VERSION} VERSION_GREATER 0.3))
+        add_definitions(-DURDF_REDEFINE_BOOST_PTR_TYPEDEFS)
+    endif ()
 endif()
 
 set(IDYNTREE_MODELIO_URDF_HEADERS include/iDynTree/ModelIO/URDFSensorsImport.h)
