Use only urdfdom_headers_VERSION to check if urdfdom_headers is greater or equal to 0.4

--- a/src/model_io/urdf-kdl/CMakeLists.txt
+++ b/src/model_io/urdf-kdl/CMakeLists.txt
@@ -13,7 +13,7 @@ else()
     find_package(urdfdom_headers REQUIRED)
     find_package(urdfdom REQUIRED)
     find_package(Boost REQUIRED)
-    if (NOT(DEFINED urdfdom_headers_VERSION AND ${urdfdom_headers_VERSION} VERSION_GREATER 0.3))
+    if (NOT(DEFINED urdfdom_headers_VERSION))
         add_definitions(-DURDF_REDEFINE_BOOST_PTR_TYPEDEFS)
     endif ()
 endif()
