Fix bug in parsing URDF file with sphere geometry
To check that the fix is effecting, add frame.urdf to list of URDF files to test.

--- a/src/tests/data/CMakeLists.txt
+++ b/src/tests/data/CMakeLists.txt
@@ -18,7 +18,8 @@ set(IDYNTREE_TESTS_URDFS icub.urdf
                          iCubGenova02.urdf
                          iCubDarmstadt01.urdf
                          twoLinksWithoutBaseSensors.urdf
-                         twoLinksRotationOnZAxis.urdf)
+                         twoLinksRotationOnZAxis.urdf
+                         frame.urdf)
 
 
 # configure an header containing the path
