Add an IDYNTREE_USES_OCTAVE_MEX to build the mex interfaces also for Octave

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -4,16 +4,18 @@
 ## about this list, any SWIG-supported language should work - take a
 ## look at e.g. ruby code below for how to do it.
 
-option(IDYNTREE_USES_PYTHON "Do you want to create the Python interface" FALSE)
-option(IDYNTREE_USES_LUA "Do you want to create the Lua interface" FALSE)
-option(IDYNTREE_USES_MATLAB "Do you want to create the MATLAB Interface" FALSE)
-option(IDYNTREE_USES_OCTAVE "Do you want to create the MATLAB Interface" FALSE)
+option(IDYNTREE_USES_PYTHON "Do you want to create the Python bindings" FALSE)
+option(IDYNTREE_USES_LUA "Do you want to create the Lua bindings" FALSE)
+option(IDYNTREE_USES_MATLAB "Do you want to create the MATLAB bindings" FALSE)
+option(IDYNTREE_USES_OCTAVE "Do you want to create the OCTAVE bindings using the Octave native C++ interface?" FALSE)
+option(IDYNTREE_USES_OCTAVE_MEX "Do you want to create the OCTAVE bindings using the mex Octave interface" FALSE)
 option(IDYNTREE_GENERATE_MATLAB "Enable if you have the experimental version of SWIG necessary for generating the Matlab wrapper" FALSE)
 
 if(IDYNTREE_USES_PYTHON OR
    IDYNTREE_USES_LUA OR
    IDYNTREE_USES_MATLAB OR
    IDYNTREE_USES_OCTAVE OR
+   IDYNTREE_USES_OCTAVE_MEX OR
    IDYNTREE_GENERATE_MATLAB)
     if(NOT IDYNTREE_USES_KDL)
         message(FATAL_ERROR "Impossible generated bindings if KDL is not enabled")
@@ -21,8 +23,8 @@ if(IDYNTREE_USES_PYTHON OR
 endif()
 
 find_package(SWIG)
-# It is possible to compile matlab bindings without using SWIG
-if(SWIG_FOUND OR IDYNTREE_USES_MATLAB)
+# It is possible to compile matlab/octave bindings without using SWIG
+if(SWIG_FOUND OR IDYNTREE_USES_MATLAB OR IDYNTREE_USES_OCTAVE_MEX)
     include(UseSWIG)
 
     set_source_files_properties(iDynTree.i PROPERTIES CPLUSPLUS ON)
@@ -51,7 +53,7 @@ if(SWIG_FOUND OR IDYNTREE_USES_MATLAB)
         add_subdirectory(python)
     endif(IDYNTREE_USES_PYTHON)
 
-    if(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
+    if(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB OR IDYNTREE_USES_OCTAVE_MEX)
         add_subdirectory(matlab)
     endif()
 
