--- a/bindings/matlab/tests/CMakeLists.txt
+++ b/bindings/matlab/tests/CMakeLists.txt
@@ -6,5 +6,12 @@ add_custom_command(TARGET copy_matlab_model_in_build PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
                             ${CMAKE_CURRENT_SOURCE_DIR}/model.urdf ${CMAKE_CURRENT_BINARY_DIR}/model.urdf)
 
-add_test(NAME matlab_idyntree_tests
-         COMMAND ${Matlab_MAIN_PROGRAM} -nodisplay -nodesktop -nojvm -r "addpath('$<TARGET_FILE_DIR:${mexname}>');addpath('${CMAKE_CURRENT_SOURCE_DIR}/../');addpath('${CMAKE_CURRENT_SOURCE_DIR}/');addpath(genpath('${IDYNTREE_INTERNAL_MOXUNIT_PATH}'));success=moxunit_runtests('${CMAKE_CURRENT_SOURCE_DIR}','-verbose');exit(~success);")
+if (IDYNTREE_USES_MATLAB)
+  add_test(NAME matlab_idyntree_tests
+           COMMAND ${Matlab_MAIN_PROGRAM} -nodisplay -nodesktop -nojvm -r "addpath('$<TARGET_FILE_DIR:${mexname}>');addpath('${CMAKE_CURRENT_SOURCE_DIR}/../');addpath('${CMAKE_CURRENT_SOURCE_DIR}/');addpath(genpath('${IDYNTREE_INTERNAL_MOXUNIT_PATH}'));success=moxunit_runtests('${CMAKE_CURRENT_SOURCE_DIR}','-verbose');exit(~success);")
+endif()
+
+if (IDYNTREE_USES_OCTAVE_MEX)
+  add_test(NAME octave_mex_idyntree_tests
+           COMMAND ${OCTAVE_EXECUTABLE} --eval "addpath('$<TARGET_FILE_DIR:idyntreeOctaveMex>');addpath('${CMAKE_CURRENT_SOURCE_DIR}/../');addpath('${CMAKE_CURRENT_SOURCE_DIR}/');addpath(genpath('${IDYNTREE_INTERNAL_MOXUNIT_PATH}'));success=moxunit_runtests('${CMAKE_CURRENT_SOURCE_DIR}','-verbose');exit(~success);")
+endif()
