--- a/bindings/matlab/tests/CMakeLists.txt
+++ b/bindings/matlab/tests/CMakeLists.txt
@@ -13,5 +13,5 @@ endif()
 
 if (IDYNTREE_USES_OCTAVE_MEX)
   add_test(NAME octave_mex_idyntree_tests
-           COMMAND ${OCTAVE_EXECUTABLE} --eval "addpath('$<TARGET_FILE_DIR:idyntreeOctaveMex>');addpath('${CMAKE_CURRENT_SOURCE_DIR}/../');addpath('${CMAKE_CURRENT_SOURCE_DIR}/');addpath(genpath('${IDYNTREE_INTERNAL_MOXUNIT_PATH}'));success=moxunit_runtests('${CMAKE_CURRENT_SOURCE_DIR}','-verbose');exit(~success);")
+           COMMAND ${OCTAVE_EXECUTABLE} --no-gui --quiet --eval "addpath('$<TARGET_FILE_DIR:idyntreeOctaveMex>');addpath('${CMAKE_CURRENT_SOURCE_DIR}/../');addpath('${CMAKE_CURRENT_SOURCE_DIR}/');addpath(genpath('${IDYNTREE_INTERNAL_MOXUNIT_PATH}'));success=moxunit_runtests('${CMAKE_CURRENT_SOURCE_DIR}','-verbose');exit(~success);")
 endif()
