Remove the dependency of the bindings on YARP and orocos_kdl
Fix https://github.com/robotology/idyntree/issues/227
This is achieved by creating dummy implementations of the
DynamicRegressorGenerator and DynamicComputations classes.
While DynamicComputations is deprecated and will be substituted
by KinDynComputations, DynamicRegressorGenerator needs to be
properly migrated to iDynTree classes.

--- a/src/high-level-kdl/CMakeLists.txt
+++ b/src/high-level-kdl/CMakeLists.txt
@@ -8,7 +8,11 @@ set(IDYNTREE_HIGH_LEVEL_KDL_HEADERS include/iDynTree/HighLevel/DynamicsComputati
 
 set(IDYNTREE_HIGH_LEVEL_KDL_PRIVATE_INCLUDES )
 
-set(IDYNTREE_HIGH_LEVEL_KDL_SOURCES src/DynamicsComputations.cpp)
+if (IDYNTREE_USES_KDL)
+    set(IDYNTREE_HIGH_LEVEL_KDL_SOURCES src/DynamicsComputations.cpp)
+else ()
+    set(IDYNTREE_HIGH_LEVEL_KDL_SOURCES src/DummyDynamicsComputations.cpp)
+endif()
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_HIGH_LEVEL_KDL_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_HIGH_LEVEL_KDL_HEADERS})
@@ -26,7 +30,11 @@ endif()
 
 include_directories(${libraryname} SYSTEM ${EIGEN3_INCLUDE_DIR} ${orocos_kdl_INCLUDE_DIRS} ${TinyXML_INCLUDE_DIRS})
 
-target_link_libraries(${libraryname} idyntree-core idyntree-kdl idyntree-sensors idyntree-modelio-urdf-kdl ${TinyXML_LIBRARIES} )
+target_link_libraries(${libraryname} idyntree-core)
+if (IDYNTREE_USES_KDL)
+    target_link_libraries(${libraryname} idyntree-kdl idyntree-modelio-urdf-kdl idyntree-sensors idyntree-modelio-urdf-kdl ${TinyXML_LIBRARIES})
+endif()
+
 
 # Ensure that build include directories are always included before system ones
 get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
@@ -48,6 +56,6 @@ set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${libraryname})
 get_property(IDYNTREE_COMP_INCLUDE_DIRS TARGET ${libraryname} PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS ${IDYNTREE_COMP_INCLUDE_DIRS})
 
-if(IDYNTREE_COMPILE_TESTS)
+if(IDYNTREE_COMPILE_TESTS AND IDYNTREE_USES_KDL)
     add_subdirectory(tests)
-endif(IDYNTREE_COMPILE_TESTS)
+endif()
