Fix compilation of example if iDynTree is compiled without YARP

--- a/examples/icubArmRegressor/CMakeLists.txt
+++ b/examples/icubArmRegressor/CMakeLists.txt
@@ -16,6 +16,7 @@ source_group("Source Files" FILES ${folder_source})
 
 add_executable(${PROJECT_NAME} ${folder_source})
 
+target_include_directories(${PROJECT_NAME} PUBLIC ${YARP_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES}
                                       ${iDynTree_LIBRARIES})
 
