Added function to parse rotation matrices from ini file

--- a/src/yarp/CMakeLists.txt
+++ b/src/yarp/CMakeLists.txt
@@ -4,10 +4,12 @@
 
 project(iDynTree_YARP CXX)
 
-SET(iDynTree_YARP_source src/YARPConversions.cpp)
+SET(iDynTree_YARP_source src/YARPConversions.cpp
+                         src/YARPConfigurationsLoader.cpp)
 
 SET(iDynTree_YARP_header include/iDynTree/yarp/YARPConversions.h
-                         include/iDynTree/yarp/YARPEigenConversions.h)
+                         include/iDynTree/yarp/YARPEigenConversions.h
+                         include/iDynTree/yarp/YARPConfigurationsLoader.h)
 
 SOURCE_GROUP("Source Files" FILES ${iDynTree_YARP_source})
 SOURCE_GROUP("Header Files" FILES ${iDynTree_YARP_header})
