--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -46,6 +46,8 @@ if(IDYNTREE_USES_ICUB_MAIN AND IDYNTREE_USES_KDL)
 endif()
 
 if (IDYNTREE_USES_YARP AND IDYNTREE_USES_QT5)
-    add_subdirectory(idyntree-sole-gui)
+    if (IDYNTREE_BUILD_IK)
+        add_subdirectory(idyntree-sole-gui)
+    endif()
     add_subdirectory(plotter)
 endif()
