Added ColumnMajor storage order SparseMatrix
Now SparseMatrix is a template depending on the storage ordering (row-major or column-major)
All the methods are implemented in the .cpp file.
The library instantiate the two (only) possible SparseMatrix types, i.e. row and column major,
so the implementation of the methods should not be necessary, thus the choice to put it in the .cpp
Furthermore, the actual difference between the two template version is the implementation of some methods.
Template here is used as an alternative to hierarchy.

--- a/src/estimation/CMakeLists.txt
+++ b/src/estimation/CMakeLists.txt
@@ -15,6 +15,11 @@ set(IDYNTREE_ESTIMATION_SOURCES src/BerdyHelper.cpp
                                 src/ExternalWrenchesEstimation.cpp
                                 src/ExtWrenchesAndJointTorquesEstimator.cpp
                                 src/SimpleLeggedOdometry.cpp)
+                                
+if (NOT ${EIGEN3_VERSION} VERSION_LESS 3.3)
+  list(APPEND IDYNTREE_ESTIMATION_HEADERS include/iDynTree/Estimation/BerdySparseMAPSolver.h)
+  list(APPEND IDYNTREE_ESTIMATION_SOURCES src/BerdySparseMAPSolver.cpp)
+endif()
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_ESTIMATION_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_ESTIMATION_HEADERS})
