[sensors] Add new sensor ThreeAxisAngularAccelerometer
Furthermore, did some modifications to sensors data structures
to improve early checking.

--- a/src/sensors/CMakeLists.txt
+++ b/src/sensors/CMakeLists.txt
@@ -14,6 +14,7 @@ set(IDYNTREE_SENSORS_HEADERS include/iDynTree/Sensors/Sensors.h
                              include/iDynTree/Sensors/SixAxisFTSensor.h
                              include/iDynTree/Sensors/GyroscopeSensor.h
                              include/iDynTree/Sensors/AccelerometerSensor.h
+                             include/iDynTree/Sensors/ThreeAxisAngularAccelerometerSensor.h
                              include/iDynTree/Sensors/PredictSensorsMeasurements.h
                              include/iDynTree/Sensors/ModelSensorsTransformers.h)
 
@@ -21,6 +22,7 @@ set(IDYNTREE_SENSORS_SOURCES src/Sensors.cpp
                              src/SixAxisFTSensor.cpp
                              src/AccelerometerSensor.cpp
                              src/GyroscopeSensor.cpp
+                             src/ThreeAxisAngularAccelerometerSensor.cpp
                              src/PredictSensorsMeasurements.cpp
                              src/ModelSensorsTransformers.cpp)
 
