Fix compilation and linking without KDL but with YARP and ICUB
We should add this configuration to at least a build in Travis

--- a/src/icub/CMakeLists.txt
+++ b/src/icub/CMakeLists.txt
@@ -34,7 +34,7 @@ set_target_properties(${libraryname} PROPERTIES PUBLIC_HEADER "${iDynTree_ICUB_h
 
 
 target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include;${IDYNTREE_TREE_INCLUDE_DIRS}>"
-                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
+                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
 
 target_link_libraries(${libraryname} LINK_PUBLIC iKin skinDynLib idyntree-core idyntree-model idyntree-yarp idyntree-estimation)
 
@@ -43,9 +43,10 @@ if(NOT CMAKE_VERSION VERSION_LESS 2.8.12)
 endif()
 
 target_include_directories(${libraryname} INTERFACE ${skinDynLib_INCLUDE_DIRS})
-target_include_directories(${libraryname} PRIVATE ${iKin_INCLUDE_DIRS})
-
 include_directories(SYSTEM ${skinDynLib_INCLUDE_DIRS})
+target_include_directories(${libraryname} INTERFACE ${iKin_INCLUDE_DIRS})
+include_directories(SYSTEM ${iKin_INCLUDE_DIRS})
+
 
 install(TARGETS ${libraryname}
         EXPORT iDynTree
