--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ add_unit_test(SparseMatrix)
 add_unit_test(EigenHelpers)
 add_unit_test(Rotation)
 add_unit_test(EigenSparseHelpers)
+add_unit_test(TransformFromMatrix4x4)
